--- a/app/views/css/login.css
+++ b/app/views/css/login.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('login_background.jpg') no-repeat center center/cover;
+    background: url('../images/login_background.jpg') no-repeat center center/cover;
     box-shadow: inset 0 0 0 1000px var(--color-overlay-light);
 }
 
