--- a/app/views/css/register.css
+++ b/app/views/css/register.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 40px 0;
-    background: url('register_background.jpg') no-repeat center center/cover;
+    background: url('../images/register_background.jpg') no-repeat center center/cover;
     box-shadow: inset 0 0 0 1000px var(--color-overlay-medium);
 }
 
